--- a/config.yml
+++ b/config.yml
@@ -4,36 +4,26 @@
 default:
   # gmail account to associate with {googledrive}
   google_email: ""
-  # The local directory where the first {targets} pipeline is located (i.e.,
+  # The local directory where the harmonize {targets} pipeline is located (i.e.,
   # the pipeline that runs the download step)
-  download_repo_directory: "../AquaMatch_harmonize_WQP/"
-  # Use a stable version of the harmonized parameter datasets?
-  chl_use_stable: FALSE
-  doc_use_stable: FALSE
-  sdd_use_stable: FALSE
-  # Use the stable version of other files created in the download step?
-  general_use_stable: FALSE
-  drive_project_folder: ""
+  harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"
+  parameters: "chla,sdd" # any combination of harmonized data
+  use_stable: FALSE
+  drive_project_folder: "~/aquamatch_siteSR_wqp/"
 # External user runs harmonization using stable datasets, creates harmonized 
 # datasets in their own Google Drive
 use_stable:
-  google_email: ""
-  download_repo_directory: "../AquaMatch_harmonize_WQP/"
-  chl_use_stable: TRUE
-  chl_stable_date: "20240402"
-  doc_use_stable: TRUE
-  doc_stable_date: "20240402"
-  general_use_stable: TRUE
-  general_stable_date: "202404"
-  drive_project_folder: ""
+  google_email: "steeleb@colosate.edu"
+  harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"
+  parameters: "chla,sdd" # any combination of harmonized data
+  use_stable: TRUE
+  stable_date: "20240701"
+  drive_project_folder: "~/aquamatch_siteSR_wqp/"
 # Update the stable dataset version for one or more parameters
 admin_update:
   google_email: "therossyndicate@gmail.com"
-  download_repo_directory: "../AquaMatch_harmonize_WQP/"
-  chl_use_stable: TRUE
-  chl_stable_date: "20240402"
-  doc_use_stable: TRUE
-  doc_stable_date: "20240402"
-  general_use_stable: TRUE
-  general_stable_date: "20240402"
-  drive_project_folder: "~/aquamatch_harmonize_wqp/"
+  harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"
+  parameters: "chla,sdd" # any combination of harmonized data
+  use_stable: TRUE
+  stable_date: "20240701"
+  drive_project_folder: "~/aquamatch_siteSR_wqp/"
