--- a/config.yml
+++ b/config.yml
@@ -7,23 +7,28 @@ default:
   # The local directory where the harmonize {targets} pipeline is located (i.e.,
   # the pipeline that runs the download step)
   harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"
-  parameters: "chla,sdd" # any combination of harmonized data
-  use_stable: FALSE
+  parameters: "chla,sdd" # any combination of harmonized data separated by ","
+  chla_use_stable: FALSE
+  sdd_use_stable: FALSE
   drive_project_folder: "~/aquamatch_siteSR_wqp/"
-# External user runs harmonization using stable datasets, creates harmonized 
+# External user runs siteSR using stable datasets, creates surface reflectance stack 
 # datasets in their own Google Drive
 use_stable:
-  google_email: "steeleb@colosate.edu"
+  google_email: ""
   harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"
-  parameters: "chla,sdd" # any combination of harmonized data
-  use_stable: TRUE
-  stable_date: "20240701"
-  drive_project_folder: "~/aquamatch_siteSR_wqp/"
+  parameters: "chla,sdd" # any combination of harmonized data separated by ","
+  chla_use_stable: TRUE
+  chla_stable_date: "20240701"
+  sdd_use_stable: TRUE
+  sdd_stable_date: "20240701"
+  drive_project_folder: ""
 # Update the stable dataset version for one or more parameters
 admin_update:
   google_email: "therossyndicate@gmail.com"
   harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"
-  parameters: "chla,sdd" # any combination of harmonized data
-  use_stable: TRUE
-  stable_date: "20240701"
+  parameters: "chla,sdd" # any combination of harmonized data separated by ","
+  chla_use_stable: TRUE
+  chla_stable_date: "20240701"
+  sdd_use_stable: TRUE
+  sdd_stable_date: "20240701"
   drive_project_folder: "~/aquamatch_siteSR_wqp/"
