a few function documentation tweaks

--- a/gee_config.yml
+++ b/gee_config.yml
@@ -39,7 +39,7 @@ spatial_settings:
 # "site+polygon+polycenter", "polygon+polycenter" - at this time lake and lake 
 # center can only be calculated for lakes in the US
 - site_buffer: 200 # buffer distance in meters around the site or poly center
-- site_filter: TRUE # R boolean (TRUE/FALSE) - note if sites should be filtered to only include lake/res/pond/river/stream sites or not
+- site_filter: FALSE # R boolean (TRUE/FALSE) - note if sites should be filtered to only include lake/res/pond/river/stream sites or not
 
 gee_settings:
 - cloud_filter: "True" # python boolean ("True"/"False") - if True, scenes will be filtered by 
