--- a/gee_config.yml
+++ b/gee_config.yml
@@ -24,11 +24,11 @@ google_settings:
 # credentials
 - proj: "siteSR" # this is a short name for file naming conventions. All output 
 # files will include this prefix.
-- proj_folder: "AquaMatch_siteSR" # this is the folder name where the GEE data will be save to 
+- proj_folder: "siteSR" # this is the folder name where the GEE data will be save to 
 # Google Drive. If it doesn't exist, it will be created.
 - proj_parent_folder: "~/aquamatch_siteSR_wqp/" # this is the parent folder that the siteSR data is exported to, located at the root directory of your Google Drive
 - ee_proj: "ee-aquamatch" # this is the ee project name you are running your pulls from
-- run_date: "2025-02-19" # date of run for versioning, must be in YYYY-MM-DD foramt
+- run_date: "2025-02-24" # date of run for versioning, must be in YYYY-MM-DD foramt
 
 temporal_settings: 
 - start_date: "1983-01-01" # earliest data of satellite data to be acquired; 
