--- a/gee_config.yml
+++ b/gee_config.yml
@@ -26,7 +26,9 @@ google_settings:
 # files will include this prefix.
 - proj_folder: "siteSR" # this is the folder name where the GEE data will be save to 
 # Google Drive. If it doesn't exist, it will be created.
-- proj_parent_folder: "~/aquamatch_siteSR_wqp/" # this is the parent folder that the siteSR data is exported to, located at the root directory of your Google Drive
+- proj_parent_folder: "~/aquamatch_siteSR_wqp/" # this is the parent folder that 
+# the siteSR data is exported to, located at the root directory of your Google Drive.
+# must start with "~/" and end with "/"
 - ee_proj: "ee-aquamatch" # this is the ee project name you are running your pulls from
 - run_date: "2025-02-24" # date of run for versioning, must be in YYYY-MM-DD foramt
 
