--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,16 @@ _targets/
 4_compile_sites/mid/*
 4_compile_sites/out/*
 4_compile_sites/nhd/*
+!4_compile_sites/out/collated_sites_drive_id.csv
+!4_compile_sites/out/harmonized_sites_drive_id.csv
 
 5_determine_RS_visibility/mid/*
 5_determine_RS_visibility/down/*
 5_determine_RS_visibility/run/*
 5_determine_RS_visibility/out/*
+!5_determine_RS_visibility/out/gee_yml_id.csv
+!5_determine_RS_visibility/out/visible_site_id.csv
+
 
 6_siteSR_stack/down/*
 6_siteSR_stack/out/*
