--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ _targets/
 6_siteSR_stack/run/*
 !6_siteSR_stack/out/raw_collated_filse_drive_ids.csv
 
+7_qa_and_apply_handoffs/qa/*
+
 # Python environment
 env/*
 
