--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,8 @@ _targets/
 6_siteSR_stack/run/*
 !6_siteSR_stack/out/raw_collated_filse_drive_ids.csv
 
-7_qa_and_apply_handoffs/qa/*
+7_qa_stack/qa/*
+7_qa_stack/out/*
 
 # Python environment
 env/*
