--- a/config.yml
+++ b/config.yml
@@ -18,13 +18,10 @@ default:
   run_pekel: FALSE 
   run_GEE: FALSE
   pekel_gee_version: "2025-02-24"
-  # The local directory where the lakeSR {targets} pipeline is located (i.e.,
-  # the pipeline that runs the lakeSR workflow)
-  lakesr_repo_directory: "../AquaMatch_lakeSR/"
-  handoff_stable_date: "2025-02-25"
-  correction_method: "gardner" # gardner or roy
-  correction_to: "LS7" # LS7 or LS8
-  match_window: 3 # number of days allowed between in-situ remote sensing for matching
+  update_and_share: TRUE # indication of whether of not the 'export' siteSR files should be 
+  # uploaded to Drive
+  lakesr_repo_directory: "../AquaMatch_lakeSR/" # The local directory where the 
+  # lakeSR {targets} pipeline is located (i.e., the pipeline that runs the lakeSR workflow)
 # Update the stable dataset version for one or more parameters
 admin_update:
   google_email: "therossyndicate@gmail.com"
@@ -40,7 +37,5 @@ admin_update:
   handoff_date: "2025-02-25"
   run_pekel: TRUE
   run_GEE: TRUE
-  correction_method: "gardner" # gardner or roy
-  correction_to: "LS7" # LS7 or LS8
-  match_window: 3 # number of days allowed between in-situ remote sensing for matching
+  update_and_share: TRUE 
 
