--- a/config.yml
+++ b/config.yml
@@ -5,9 +5,9 @@ default:
   # gmail account to associate with {googledrive}
   google_email: "therossyndicate@gmail.com"
   drive_project_folder: "~/aquamatch_siteSR_wqp/" # must start with "~/" and end with "/"
-  # The local directory where the harmonize {targets} pipeline is located (i.e.,
-  # the pipeline that runs the harmonize step)
-  harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"
+  harmonize_repo_directory: "../AquaMatch_harmonize_WQP/"# The local directory 
+  # where the harmonize {targets} pipeline is located (i.e., the pipeline that
+  # runs the harmonize step)
   parameters: "chla,sdd,doc,tss" # any combination of harmonized parameters in 
   # lowercase separated by "," current options: chla, sdd, doc, tss
   chla_stable_date: "20240701"
@@ -19,7 +19,7 @@ default:
   run_GEE: FALSE
   pekel_gee_version: "2025-02-24"
   update_and_share: TRUE # indication of whether of not the 'export' siteSR files should be 
-  # uploaded to Drive
+  # uploaded to Drive, requires drive_project_folder if set to TRUE
   lakesr_repo_directory: "../AquaMatch_lakeSR/" # The local directory where the 
   # lakeSR {targets} pipeline is located (i.e., the pipeline that runs the lakeSR workflow)
 # Update the stable dataset version for one or more parameters
