--- a/config.yml
+++ b/config.yml
@@ -1,24 +1,35 @@
 # Default: use stable harmonization pipeline, site collation, pekel run, and siteSR run.
 # Best for users who wish to run the pipeline to make different filtering decisions
-# in the siteSR dataset.
+# in the siteSR dataset in the {targets} group `d_qa_stack`
 default:
   # gmail account to associate with {googledrive}
-  google_email: "therossyndicate@gmail.com"
-  drive_project_folder: "~/aquamatch_siteSR_wqp/" # must start with "~/" and end with "/"
-  collated_site_version: "2025-06-02" # date of stored site collation for pipeline
+  google_email: ""
+  # location where you want to store the output of the pipeline, if `update_and_share` is set to TRUE
+  drive_project_folder: "~/FILE_PATH/" # note: must start with "~/" and end with "/"
+  # should pipeline use pre-existing site collaiton (all WQP/NWIS surface water sites)
+  compile_locations: FALSE
+  # date of stored site collation version.
+  collated_site_version: "2025-06-02"
+  # should the pekel visibility step be run? (requires GEE authentication and
+  # update of the `gee_config.yml` file)
   run_pekel: FALSE 
+  # should the GEE workflow to obtain remote sensing summaries be run? (if you set
+  # `run_pekel` to TRUE and have made changes to that process, also set `run_GEE`
+  # to TRUE. requires GEE authentication and update of the `gee_config.yml` file)
   run_GEE: FALSE
-  pekel_gee_version: "2025-06-02"
+  # date of stored pekel/gee version (if `run_pekel` and `run_GEE` set to false)
+  pekel_gee_version: "2025-06-02" 
   update_and_share: FALSE # indication of whether of not the 'export' siteSR files should be 
   # uploaded to Drive, requires drive_project_folder if set to TRUE
 
-# Update the stable dataset version for one or more parameters
+# Update the stable dataset versions, intended to be used by the ROSS team
 admin_update:
   google_email: "therossyndicate@gmail.com"
   drive_project_folder: "~/aquamatch_siteSR_wqp/"
-  collated_site_version: "2025-06-02"
-  handoff_date: "2025-06-02"
+  compile_locations: TRUE
+  collated_site_version: "2025-06-02" # this will become the date stamp for the new compilation!
   run_pekel: TRUE
   run_GEE: TRUE
   update_and_share: TRUE 
+  # note, pekel/gee version date is set in the `gee_config.yml` file
 
