--- a/config.yml
+++ b/config.yml
@@ -5,11 +5,11 @@ default:
   # gmail account to associate with {googledrive}
   google_email: "therossyndicate@gmail.com"
   # location where you want to store the output of the pipeline, if `update_and_share` is set to TRUE
-  drive_project_folder: "~/FILE_PATH/" # note: must start with "~/" and end with "/"
+  drive_project_folder: "~/aquamatch_siteSR_wqp/" # note: must start with "~/" and end with "/"
   # should pipeline use pre-existing site collation (all WQP/NWIS surface water sites)
-  compile_locations: FALSE
+  compile_locations: TRUE
   # date of stored site collation version.
-  collated_site_version: "2025-06-02"
+  collated_site_version: "2025-06-04"
   # should the pekel visibility step be run? (requires GEE authentication and
   # update of the `gee_config.yml` file)
   run_pekel: FALSE 
