--- a/config.yml
+++ b/config.yml
@@ -6,12 +6,17 @@ default:
   google_email: "therossyndicate@gmail.com"
   # location where you want to store the output of the pipeline, if `update_and_share` is set to TRUE
   drive_project_folder: "~/aquamatch_siteSR_wqp/" # note: must start with "~/" and end with "/"
-  # should pipeline use pre-existing site collation (all WQP/NWIS surface water sites)
+  # should pipeline perform new site collation for all WQP/NWIS surface water sites?
+  # FALSE = use pre-existing collated sites
+  # TRUE = re-collate data in the -a- group
   compile_locations: FALSE
   # date of stored site collation version.
   collated_site_version: "2025-06-04"
   # should the pekel visibility step be run? (requires GEE authentication and
   # update of the `gee_config.yml` file)
+  # FALSE = use pre-pulled pekel summary stats
+  # TRUE = re-pull pekel summary stats in the -b- group
+  # if set to TRUE, run_GEE must also be TRUE
   run_pekel: FALSE 
   # should the GEE workflow to obtain remote sensing summaries be run? (if you set
   # `run_pekel` to TRUE and have made changes to that process, also set `run_GEE`
@@ -19,8 +24,11 @@ default:
   run_GEE: FALSE
   # date of stored pekel/gee version (if `run_pekel` and `run_GEE` set to false)
   pekel_gee_version: "2025-06-06" 
-  update_and_share: FALSE # indication of whether of not the 'export' siteSR files should be 
-  # uploaded to Drive, requires drive_project_folder if set to TRUE
+  # should the pipeline 'export' and 'share' siteSR files? 
+  # FALSE = files are collated locally, but not uploaded to Google Drive
+  # TRUE = files are collated locall AND uploaded to drive. 
+  # TRUE setting requires drive_project_folder designation
+  update_and_share: FALSE 
 
 # Update the stable dataset versions, intended to be used by the ROSS team
 admin_update:
